--- a/the-five-devices-you-need-to-work-anytime/feed/index.html
+++ b/the-five-devices-you-need-to-work-anytime/feed/index.html
@@ -4,8 +4,8 @@
 	<channel>
 		<title>
 			Comments on: The Five Devices You Need To Work Anytime </title>
-		<atom:link href="https://arvconsultants.github.io/the-five-devices-you-need-to-work-anytime/feed/"
-			rel="self" type="application/rss+xml" />
+		<atom:link href="https://arvconsultants.github.io/the-five-devices-you-need-to-work-anytime/feed/" rel="self"
+			type="application/rss+xml" />
 		<link>https://arvconsultants.github.io/the-five-devices-you-need-to-work-anytime/</link>
 		<description>Just another WordPress site</description>
 		<lastBuildDate>Mon, 01 Feb 2021 07:47:14 +0000</lastBuildDate>
