--- a/the-next-big-challenge-for-content-marketer/feed/index.html
+++ b/the-next-big-challenge-for-content-marketer/feed/index.html
@@ -4,8 +4,8 @@
 	<channel>
 		<title>
 			Comments on: The Next Big Challenge for Content Marketer </title>
-		<atom:link href="https://arvconsultants.github.io/the-next-big-challenge-for-content-marketer/feed/"
-			rel="self" type="application/rss+xml" />
+		<atom:link href="https://arvconsultants.github.io/the-next-big-challenge-for-content-marketer/feed/" rel="self"
+			type="application/rss+xml" />
 		<link>https://arvconsultants.github.io/the-next-big-challenge-for-content-marketer/</link>
 		<description>Just another WordPress site</description>
 		<lastBuildDate>Mon, 01 Feb 2021 07:47:14 +0000</lastBuildDate>
