--- a/hello-world/feed/index.html
+++ b/hello-world/feed/index.html
@@ -4,8 +4,7 @@
 	<channel>
 		<title>
 			Comments on: Hello world! </title>
-		<atom:link href="https://arvconsultants.github.io/hello-world/feed/" rel="self"
-			type="application/rss+xml" />
+		<atom:link href="https://arvconsultants.github.io/hello-world/feed/" rel="self" type="application/rss+xml" />
 		<link>https://arvconsultants.github.io/hello-world/</link>
 		<description>Just another WordPress site</description>
 		<lastBuildDate>Fri, 22 Sep 2023 04:58:21 +0000</lastBuildDate>
