--- a/capabilities/index.html
+++ b/capabilities/index.html
@@ -3426,7 +3426,7 @@
 																								Virendra Kumar </div>
 																							<div
 																								class="elementor-team-job">
-																								Director</div>
+																								Team Member</div>
 																							<div
 																								class="elementor-team-description">
 																								<style>
@@ -3441,8 +3441,7 @@
 
 																									<p> Virendra Kumar,
 																										a seasoned
-																										professional and
-																										Director at ARV
+																										professional at ARV
 																										Consultants,
 																										excels in
 																										Business
@@ -3583,7 +3582,7 @@
 																								Archana Kumari</div>
 																							<div
 																								class="elementor-team-job">
-																								Director</div>
+																								Team Member</div>
 																							<div
 																								class="elementor-team-description">
 																								<style>
@@ -3596,9 +3595,8 @@
 																								<body>
 
 																									<p> Archana Kumari,
-																										the Director and
-																										leader at ARV
-																										Consultant, is a
+																										a Team Member at ARV
+																										Consultants, is a
 																										specialist in
 																										operational
 																										accounting,
