--- a/about-us/index.html
+++ b/about-us/index.html
@@ -3863,7 +3863,7 @@
 																								Virendra Kumar </div>
 																							<div
 																								class="elementor-team-job">
-																								Director</div>
+																								Team Member</div>
 																							<div
 																								class="elementor-team-description">
 																								<style>
@@ -3878,8 +3878,7 @@
 
 																									<p> Virendra Kumar,
 																										a seasoned
-																										professional and
-																										Director at ARV
+																										professional at ARV
 																										Consultants,
 																										excels in
 																										Business
@@ -4020,7 +4019,7 @@
 																								Archana Kumari</div>
 																							<div
 																								class="elementor-team-job">
-																								Director</div>
+																								Team Member</div>
 																							<div
 																								class="elementor-team-description">
 																								<style>
@@ -4033,8 +4032,7 @@
 																								<body>
 
 																									<p> Archana Kumari,
-																										the Director and
-																										leader at ARV
+																										a Team Member at ARV
 																										Consultant, is a
 																										specialist in
 																										operational
