--- a/about-us/index.html
+++ b/about-us/index.html
@@ -4033,7 +4033,7 @@
 
 																									<p> Archana Kumari,
 																										a Team Member at ARV
-																										Consultant, is a
+																										Consultants, is a
 																										specialist in
 																										operational
 																										accounting,
