--- a/capabilities/index.html
+++ b/capabilities/index.html
@@ -2687,6 +2687,11 @@
 																	class="elementor-item">Career</a>
 															</li>
 															<li
+																class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-32 current_page_item menu-item-6862">
+																<a href="https://arvconsultants.github.io/news/"
+																	aria-current="page" class="elementor-item">News</a>
+															</li>
+															<li
 																class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-7016 current_page_item menu-item-7070">
 																<a href="https://arvconsultants.github.io/capabilities/"
 																	aria-current="page"
@@ -3441,7 +3446,8 @@
 
 																									<p> Virendra Kumar,
 																										a seasoned
-																										professional at ARV
+																										professional at
+																										ARV
 																										Consultants,
 																										excels in
 																										Business
@@ -3595,8 +3601,10 @@
 																								<body>
 
 																									<p> Archana Kumari,
-																										a Team Member at ARV
-																										Consultants, is a
+																										a Team Member at
+																										ARV
+																										Consultants, is
+																										a
 																										specialist in
 																										operational
 																										accounting,
