--- a/about-us/index.html
+++ b/about-us/index.html
@@ -3565,7 +3565,7 @@
 																								Anita Kumari </div>
 																							<div
 																								class="elementor-team-job">
-																								Founder & CEO</div>
+																								Director</div>
 																							<div
 																								class="elementor-team-description">
 																								<style>
@@ -3578,8 +3578,7 @@
 																								<body>
 
 																									<p>Anita Kumari, the
-																										esteemed
-																										founder, and CEO
+																										Director
 																										of ARV
 																										Consultants
 																										highly
