--- a/capabilities/index.html
+++ b/capabilities/index.html
@@ -3130,7 +3130,7 @@
 																								Anita Kumari </div>
 																							<div
 																								class="elementor-team-job">
-																								Founder & CEO</div>
+																								Director</div>
 																							<div
 																								class="elementor-team-description">
 																								<style>
@@ -3143,8 +3143,7 @@
 																								<body>
 
 																									<p>Anita Kumari, the
-																										esteemed
-																										founder, and CEO
+																										Director
 																										of ARV
 																										Consultants
 																										highly
