--- a/contact/index.html
+++ b/contact/index.html
@@ -2943,6 +2943,8 @@
 														</div>
 														<p class="elementor-icon-box-description">Mobile: +1 778 875
 															7011</p>
+														<p class="elementor-icon-box-description">Alt: +1 604 283
+															1404</p>
 													</div>
 												</div>
 											</div>
@@ -3447,15 +3449,13 @@
 																				Columbia, Canada, V6S 0B4</span>
 																		</li>
 																		<li class="elementor-icon-list-item">
-																			<a href="tel:+1 778 875 7011"> <span
-																					class="elementor-icon-list-icon">
-																					<i class="opal-icon-phone"
-																						aria-hidden="true"></i>
-																				</span>
-																				<span
-																					class="elementor-icon-list-text">+1
-																					778 875 7011</span>
-																			</a>
+																			<span class="elementor-icon-list-icon">
+																				<i class="opal-icon-phone" aria-hidden="true"></i>
+																			</span>
+																			<span class="elementor-icon-list-text" style="display:inline-flex; gap:8px;">
+																				<a href="tel:+17788757011">+1 778 875 7011</a> |
+																				<a href="tel:+16042831404">+1 604 283 1404</a>
+																			</span>
 																		</li>
 																		<li class="elementor-icon-list-item">
 																			<a href="mailto:info@arvconsultants.ca">
